# Predict-Data

./: Data analysis.py  Predict_usingML.py  analize_data.ipynb  bsuos_data.csv  predict_by_ml.ipynb  predicted data.csv  pyproject.toml
